# fixed-size-matrix-rs

./: Cargo.toml  README.md
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/const_matrix/: all.html  index.html  sidebar-items.js
docs/const_matrix/matrix/: index.html  sidebar-items.js  struct.HMatrix.html  struct.MF.html  struct.SMatrix.html  trait.Arithmetic.html  trait.Numeric.html
docs/implementors/const_matrix/matrix/: trait.Numeric.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/src/const_matrix/: lib.rs.html  matrix.rs.html  matrix_add.rs.html  matrix_add_assign.rs.html  matrix_index.rs.html  matrix_mul.rs.html  matrix_mul_assign.rs.html  matrix_neg.rs.html  matrix_sub.rs.html  matrix_sub_assign.rs.html  mul_to_heap.rs.html  mul_to_stack.rs.html  scalar_mul_f32.rs.html  scalar_mul_f64.rs.html  scalar_mul_i128.rs.html  scalar_mul_i16.rs.html  scalar_mul_i32.rs.html  scalar_mul_i64.rs.html  scalar_mul_i8.rs.html  scalar_mul_inplace.rs.html
src/: lib.rs  matrix.rs  matrix_add.rs  matrix_add_assign.rs  matrix_index.rs  matrix_mul.rs  matrix_mul_assign.rs  matrix_neg.rs  matrix_sub.rs  matrix_sub_assign.rs  mul_to_heap.rs  mul_to_stack.rs  scalar_mul_f32.rs  scalar_mul_f64.rs  scalar_mul_i128.rs  scalar_mul_i16.rs  scalar_mul_i32.rs  scalar_mul_i64.rs  scalar_mul_i8.rs  scalar_mul_inplace.rs
(+11 files in other folders)
